# mnemosyne

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  MISSION.md  NOTICE  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  mcp.json  pyproject.toml
.cargo/: audit.toml
.claude-plugin/: marketplace.json  plugin.json
.claude-plugin/commands/: init.md  search.md
.claude-plugin/hooks/: hooks.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  pages.yml  release.yml
benchmarks/: README.md  RESULTS.md  run-vs.ps1  run-vs.sh  run-vs.zsh  vs.env.example
benchmarks/logs/: README.md
commands/: mnemosyne-help.md  mnemosyne-mine.md  mnemosyne-status.md
crates/mnemosyne-bench/: Cargo.toml
crates/mnemosyne-bench/src/: main.rs  vs.rs
crates/mnemosyne-cli/: Cargo.toml
crates/mnemosyne-cli/examples/: basic_mining.rs  convo_import.rs
crates/mnemosyne-cli/src/: assertion.rs  http.rs  i18n.rs  main.rs  mcp.rs  monitor.html  tenant.rs  ui.html
crates/mnemosyne-cli/tests/: cli.rs
crates/mnemosyne-core/: Cargo.toml
crates/mnemosyne-core/src/: chunk.rs  convo.rs  drawer.rs  embed.rs  entity.rs  fde.rs  ids.rs  late.rs  lib.rs  normalize.rs  rerank.rs
crates/mnemosyne-embed-onnx/: Cargo.toml
crates/mnemosyne-embed-onnx/src/: late.rs  lib.rs  rerank.rs
crates/mnemosyne-embed-ort/: Cargo.toml
crates/mnemosyne-embed-ort/src/: late.rs  lib.rs
crates/mnemosyne-index/: Cargo.toml
crates/mnemosyne-index/src/: lib.rs
crates/mnemosyne-llm/: Cargo.toml
crates/mnemosyne-llm/src/: lib.rs
crates/mnemosyne-obs/: Cargo.toml
crates/mnemosyne-obs/src/: imp.rs  lib.rs
crates/mnemosyne-orchestrator/: Cargo.toml
crates/mnemosyne-orchestrator/src/: engine.rs  main.rs  proxy.rs  state.rs  ui.html
crates/mnemosyne-store/: Cargo.toml
crates/mnemosyne-store/src/: fdeidx.rs  hnsw.rs  kg.rs  latestage.rs  lib.rs  manage.rs  pq.rs  pqidx.rs  remote.rs  rotate.rs
crates/mnemosyne-vault/: Cargo.toml
crates/mnemosyne-vault/src/: bundle.rs  keys.rs  lib.rs  seal.rs
deploy/: README.md  docker-compose.server.yml  mnemosyne-daemon.service  mnemosyne-server.service  server.env.example
deploy/bench-vs/: README.md  docker-compose.yml  lmstudio-shim.js
deploy/observability/: README.md  RUNBOOK.md  alerts.yml  docker-compose.observability.yml  prometheus.yml
deploy/observability/alert-sink/: sink.py
deploy/observability/alertmanager/: alertmanager.yml
deploy/observability/grafana/dashboards/: mnemosyne.json
deploy/observability/grafana/provisioning/dashboards/: dashboards.yml
deploy/observability/grafana/provisioning/datasources/: datasource.yml
deploy/observability/loki/: loki-config.yml
deploy/observability/promtail/: promtail-config.yml
deploy/observability/tempo/: tempo.yml
docs/: AGENTS.md  BENCHMARKS_VS.md  MULTI_TENANCY.md  PARITY.md  RETRIEVAL_SCALING.md  SECURITY_COMPARISON.md  THREAT_MODEL.md  architecture.md  getting-started.md  integrations.md  remote-server.md  security.md
docs/diagrams/: README.md
docs/diagrams/src/: architecture-components.mmd  architecture-key-hierarchy.mmd  architecture-search-pipeline.mmd  architecture-write-path.mmd  integrations-surfaces.mmd  multitenancy-data-plane.mmd  multitenancy-migration.mmd  multitenancy-topology.mmd  observability-pipeline.mmd  retrieval-tier-map.mmd  runbook-tamper-response.mmd  security-auth-layers.mmd  security-chain-reconciliation.mmd  security-seal-verify.mmd
examples/: README.md  gemini_cli_setup.md  mcp_setup.md
hooks/: README.md  mnemosyne-session-end-hook.sh
integrations/: README.md
integrations/openclaw/: SKILL.md
integrations/shared/: recall-protocol.md
mempalace/: cli.py
rules/: mnemosyne-recall.mdc
skills/mnemosyne/: SKILL.md
skills/mnemosyne-recall/: SKILL.md
tests/: e2e-backends.sh  e2e-orchestrator.sh  e2e-telemetry.sh  e2e.sh  test_cli_hallways.py  test_mcp_http_transport.py
website/: book.toml
website/assets/: mermaid-init.js  mnemosyne.css  mnemosyne.js
website/landing/: index.html
website/src/: SUMMARY.md  agents.md  integrations.md  introduction.md  observability.md  parity.md  remote-server.md  retrieval.md  runbook.md  security.md  threat-model.md
