[workspace]
resolver = "2"
members = [
    "crates/mnemosyne-core",
    "crates/mnemosyne-vault",
    "crates/mnemosyne-store",
    "crates/mnemosyne-index",
    "crates/mnemosyne-llm",
    "crates/mnemosyne-cli",
    "crates/mnemosyne-bench",
    "crates/mnemosyne-embed-onnx",
]
# The ONNX embedder pulls heavy ML deps; it is built explicitly
# (see the `onnx-build` compose service), not by default.
default-members = [
    "crates/mnemosyne-core",
    "crates/mnemosyne-vault",
    "crates/mnemosyne-store",
    "crates/mnemosyne-index",
    "crates/mnemosyne-llm",
    "crates/mnemosyne-cli",
    "crates/mnemosyne-bench",
]

[workspace.package]
version = "0.5.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/compufreq/mnemosyne"
authors = ["compufreq <compufreq@proton.me>"]

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4.5", features = ["derive", "env"] }
time = { version = "0.3", features = ["formatting", "parsing", "serde", "macros"] }
sha2 = "0.10"
hmac = "0.12"
hkdf = "0.12"
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
hex = "0.4"
subtle = "2.6"
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = "thin"
strip = true
