[workspace]
resolver = "2"
members = [
    "crates/mnemosyne-core",
    "crates/mnemosyne-vault",
    "crates/mnemosyne-store",
    "crates/mnemosyne-index",
    "crates/mnemosyne-llm",
    "crates/mnemosyne-obs",
    "crates/mnemosyne-cli",
    "crates/mnemosyne-bench",
    "crates/mnemosyne-embed-onnx",
    "crates/mnemosyne-embed-ort",
]
# The ONNX embedders pull heavy ML deps (and `ort` links a C++ runtime); they
# are built explicitly (see the `onnx-build` / `ort-build` compose services),
# not by default.
default-members = [
    "crates/mnemosyne-core",
    "crates/mnemosyne-vault",
    "crates/mnemosyne-store",
    "crates/mnemosyne-index",
    "crates/mnemosyne-llm",
    "crates/mnemosyne-obs",
    "crates/mnemosyne-cli",
    "crates/mnemosyne-bench",
]

[workspace.package]
version = "0.18.0"
edition = "2021"
license = "BUSL-1.1"
repository = "https://github.com/compufreq/mnemosyne"
authors = ["compufreq <compufreq@proton.me>"]

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4.5", features = ["derive", "env"] }
time = { version = "0.3", features = ["formatting", "parsing", "serde", "macros"] }
sha2 = "0.10"
hmac = "0.12"
hkdf = "0.12"
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
hex = "0.4"
subtle = "2.6"
tempfile = "3"
instant-distance = "0.6"
rayon = "1"
assert_cmd = "2"
predicates = "3"

# --- observability (mnemosyne-obs, `telemetry` feature only) ---
# Versions are indicative and reconciled in Cargo.lock, matching the
# loose-pin convention above. Never pulled into a default build.
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["metrics", "trace"] }
opentelemetry-otlp = { version = "0.27", default-features = false, features = ["trace", "metrics", "http-proto", "reqwest-blocking-client"] }
opentelemetry-prometheus = "0.27"
prometheus = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-opentelemetry = "0.28"

[profile.release]
lto = "thin"
strip = true
