[package]
name = "mnemosyne-bench"
description = "Retrieval benchmarks for Mnemosyne: LongMemEval-format harness + synthetic self-contained benchmark"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "mnemosyne-bench"
path = "src/main.rs"

[features]
# Model-based benchmarking: MNEMOSYNE_EMBEDDER=onnx + MNEMOSYNE_ONNX_MODEL/_TOKENIZER
onnx = ["dep:mnemosyne-embed-onnx"]
# Local HNSW ANN prefilter: MNEMOSYNE_RETRIEVAL=hnsw
hnsw = ["mnemosyne-store/hnsw"]

[dependencies]
mnemosyne-core = { path = "../mnemosyne-core" }
mnemosyne-embed-onnx = { path = "../mnemosyne-embed-onnx", optional = true }
mnemosyne-vault = { path = "../mnemosyne-vault" }
mnemosyne-store = { path = "../mnemosyne-store" }
mnemosyne-index = { path = "../mnemosyne-index" }
mnemosyne-llm = { path = "../mnemosyne-llm" }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
