[package]
name = "mnemosyne-cli"
description = "Mnemosyne CLI and MCP server — hardened local-first AI memory"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "mnemosyne"
path = "src/main.rs"

[features]
# Enables the ONNX sentence-embedder (MNEMOSYNE_EMBEDDER=onnx).
# Off by default to keep the standard build lean and fully offline.
onnx = ["dep:mnemosyne-embed-onnx"]

[dependencies]
mnemosyne-core = { path = "../mnemosyne-core" }
mnemosyne-vault = { path = "../mnemosyne-vault" }
mnemosyne-store = { path = "../mnemosyne-store" }
mnemosyne-index = { path = "../mnemosyne-index" }
mnemosyne-embed-onnx = { path = "../mnemosyne-embed-onnx", optional = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
time = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
rusqlite = { workspace = true }
