[package]
name = "mnemosyne-cli"
description = "Mnemosyne CLI and MCP server — hardened local-first AI memory"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "mnemosyne"
path = "src/main.rs"

[features]
# Enables the ONNX sentence-embedder (MNEMOSYNE_EMBEDDER=onnx).
# Off by default to keep the standard build lean and fully offline.
onnx = ["dep:mnemosyne-embed-onnx"]
# Enables the ONNX Runtime backend (MNEMOSYNE_EMBEDDER=ort,
# MNEMOSYNE_RERANKER=ort|colbert-ort). Same user-supplied models and
# MNEMOSYNE_ONNX_*/RERANK_*/COLBERT_* variables as the tract backend,
# ~2.5× faster per forward — but links ONNX Runtime's C++ library, so it
# is opt-in like `onnx` (see the ort-build compose service).
ort = ["dep:mnemosyne-embed-ort"]
# Enables the experimental in-memory HNSW ANN prefilter
# (MNEMOSYNE_RETRIEVAL=hnsw). RAM-only, never persisted.
hnsw = ["mnemosyne-store/hnsw"]
# Enables observability: structured logs, Prometheus /metrics, OTLP export.
# Off by default (zero extra deps, zero overhead) — see mnemosyne-obs.
telemetry = ["mnemosyne-obs/telemetry"]

[dependencies]
mnemosyne-core = { path = "../mnemosyne-core" }
mnemosyne-vault = { path = "../mnemosyne-vault" }
mnemosyne-store = { path = "../mnemosyne-store" }
mnemosyne-index = { path = "../mnemosyne-index" }
mnemosyne-llm = { path = "../mnemosyne-llm" }
mnemosyne-obs = { path = "../mnemosyne-obs" }
mnemosyne-embed-onnx = { path = "../mnemosyne-embed-onnx", optional = true }
mnemosyne-embed-ort = { path = "../mnemosyne-embed-ort", optional = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
time = { workspace = true }
tiny_http = "0.12"
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = "0.22"
subtle = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
rusqlite = { workspace = true }
