[package]
name = "mnemosyne-core"
description = "Domain model for Mnemosyne: palace, wings, rooms, drawers, chunking, ids"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
