[package]
name = "mnemosyne-embed-ort"
description = "ONNX Runtime (ort) inference backend for Mnemosyne — a faster, opt-in alternative to the pure-Rust tract backend (links ONNX Runtime's C++ library)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
mnemosyne-core = { path = "../mnemosyne-core" }
thiserror = { workspace = true }
ort = "=2.0.0-rc.10"
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
