[package]
name = "mnemosyne-index"
description = "Remote vector indexes (Qdrant, Chroma, pgvector) as untrusted search accelerators — content sealed client-side"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ureq = { version = "2.10", features = ["json"] }
postgres = "0.19"
