[package]
name = "mnemosyne-llm"
description = "Local-LLM client (Ollama / OpenAI-compatible) for optional extraction refinement"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ureq = { version = "2.10", features = ["json"] }

[dev-dependencies]
tiny_http = "0.12"
