[package]
name = "mnemosyne-store"
description = "SQLite-backed palace storage with hybrid search over sealed or hmac-only vaults"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
# Local in-memory HNSW ANN prefilter (pure Rust). Off by default; a build
# without it carries zero extra deps. RAM-only index, never persisted — the
# no-plaintext-derived-index-on-disk invariant holds for sealed vaults.
hnsw = ["dep:instant-distance"]

[dependencies]
mnemosyne-core = { path = "../mnemosyne-core" }
mnemosyne-vault = { path = "../mnemosyne-vault" }
mnemosyne-index = { path = "../mnemosyne-index" }
mnemosyne-obs = { path = "../mnemosyne-obs" }
base64 = "0.22"
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
rayon = { workspace = true }
instant-distance = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
