[package]
name = "mnemosyne-vault"
description = "Hardened memory-management layer: isolated vaults, AEAD encryption, HMAC integrity"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
mnemosyne-core = { path = "../mnemosyne-core" }
mnemosyne-obs = { path = "../mnemosyne-obs" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
hkdf = { workspace = true }
chacha20poly1305 = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
hex = { workspace = true }
subtle = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
zstd = "0.13"

[dev-dependencies]
tempfile = { workspace = true }
